# ExocortexCrate

./: .gitattributes  .gitignore  Alembic.aps  Alembic.rc  AlembicArchiveStorage.cpp  AlembicArchiveStorage.h  AlembicCamera.cpp  AlembicCamera.h  AlembicCameraBaseModifier.cpp  AlembicCameraBaseModifier.h  AlembicCameraModifier.cpp  AlembicCameraModifier.h  AlembicCameraUtilities.cpp  AlembicCameraUtilities.h  AlembicCurves.cpp  AlembicCurves.h  AlembicCustomAttributesEx.cpp  AlembicCustomAttributesEx.h  AlembicDefinitions.h  AlembicExport.cpp  AlembicFileNode.cpp  AlembicFileNode.h  AlembicFloatController.cpp  AlembicFloatController.h  AlembicGetInfo.cpp  AlembicGetInfo.h  AlembicGetNodeFromIdentifier.cpp  AlembicGetNodeFromIdentifier.h  AlembicHair.cpp  AlembicHair.h  AlembicImport.cpp  AlembicImport.h  AlembicIntermediatePolyMesh.cpp  AlembicIntermediatePolyMesh.h  AlembicIntermediatePolyMesh3DSMax.cpp  AlembicIntermediatePolyMesh3DSMax.h  AlembicIntermediatePolymeshXSI.cpp  AlembicIntermediatePolymeshXSI.h  AlembicLicensing.cpp  AlembicLicensing.h  (+199 more)
2.5.2/: CMakeLists.txt
2.6.7/: CMakeLists.txt
2.7.2/: CMakeLists.txt
2011/: CMakeLists.txt
2012/: CMakeLists.txt
2013/: CMakeLists.txt  Maya2013ExocortexAlembic.mod
3/: CMakeLists.txt
3DSMax/: .gitignore  Alembic.aps  Alembic.rc  AlembicArchiveStorage.cpp  AlembicArchiveStorage.h  AlembicCamera.cpp  AlembicCamera.h  AlembicCameraModifier.cpp  AlembicCameraModifier.h  AlembicCameraUtilities.cpp  AlembicCameraUtilities.h  AlembicCurves.cpp  AlembicCurves.h  AlembicDefinitions.h  AlembicExport.aps  AlembicFloatController.cpp  AlembicFloatController.h  AlembicIntermediatePolyMesh.cpp  AlembicIntermediatePolyMesh.h  AlembicIntermediatePolyMesh3DSMax.cpp  AlembicIntermediatePolyMesh3DSMax.h  AlembicLicensing.cpp  AlembicLicensing.h  AlembicLightUtilities.cpp  AlembicLightUtilities.h  AlembicMAXScript.cpp  AlembicMAXScript.h  AlembicMax.h  AlembicMeshGeomModifier.cpp  AlembicMeshGeomModifier.h  AlembicMeshNormalsModifier.cpp  AlembicMeshNormalsModifier.h  AlembicMeshTopoModifier.cpp  AlembicMeshTopoModifier.h  AlembicMeshUVWModifier.cpp  AlembicMeshUVWModifier.h  AlembicMeshUtilities.cpp  AlembicMeshUtilities.h  AlembicMetadataUtils.cpp  AlembicMetadataUtils.h  (+61 more)
3DSMax/2010/: CMakeLists.txt
3DSMax/2011/: CMakeLists.txt
3DSMax/2013/: CMakeLists.txt
3DSMax/2014/: CMakeLists.txt
3DSMax/2015/: CMakeLists.txt
3DSMax/2016/: CMakeLists.txt
3DSMax/2017/: CMakeLists.txt
3DSMax/MaxScripts/: Exocortex-Dialog-AlembicExport.mcr  Exocortex-Dialog-AlembicImport.mcr  Exocortex-Helper-AlembicTimeControl.mcr  Exocortex-Metadata.mcr
4/: CMakeLists.txt
Arnold/: AlembicLicensing.cpp  AlembicLicensing.h  ArnoldAlembic.versionScript  CMakeLists.txt  ExocortexServicesProxy.h  New shortcut.lnk  common.cpp  common.h  curves.cpp  curves.h  dataUniqueness.cpp  dataUniqueness.h  dso.cpp  instance.cpp  instance.h  nurbs.cpp  nurbs.h  points.cpp  points.h  polyMesh.cpp  polyMesh.h  stdafx.h  utility.cpp  utility.h
CommonUtils/: CMakeLists.txt  CommonAbcCache.cpp  CommonAbcCache.h  CommonAlembic.h  CommonFoundation.h  CommonImport.cpp  CommonImport.h  CommonIntermediatePolyMesh.cpp  CommonIntermediatePolyMesh.h  CommonLicensing.h  CommonLog.h  CommonMeshUtilities.cpp  CommonMeshUtilities.h  CommonOS.h  CommonProfiler.h  CommonRegex.cpp  CommonRegex.h  CommonSceneGraph.cpp  CommonSceneGraph.h  CommonSubtreeMerge.cpp  CommonSubtreeMerge.h  CommonUtilities.cpp  CommonUtilities.h
Compounds/: ABC Define Color Attribute.1.1.xsicompound  ABC Instance Shapes.1.1.xsicompound  (+1 more)
Maya/: AlembicArchiveStorage.cpp  AlembicArchiveStorage.h  AlembicCamera.cpp  AlembicCamera.h  AlembicCurves.cpp  AlembicCurves.h  AlembicFileNode.cpp  AlembicFileNode.h  AlembicHair.cpp  AlembicHair.h  AlembicImport.cpp  AlembicImport.h  AlembicLicensing.cpp  AlembicLicensing.h  AlembicObject.cpp  AlembicObject.h  AlembicPoints.cpp  AlembicPoints.h  AlembicPolyMesh.cpp  AlembicPolyMesh.h  AlembicSubD.cpp  AlembicSubD.h  AlembicTimeControl.cpp  AlembicTimeControl.h  AlembicValidateNameCmd.cpp  AlembicValidateNameCmd.h  AlembicWriteJob.cpp  AlembicWriteJob.h  AlembicXform.cpp  AlembicXform.h  AttributesReading.cpp  AttributesReading.h  AttributesWriter.cpp  AttributesWriter.h  CMakeLists.txt  ExocortexServicesProxy.h  MayaUtility.cpp  MayaUtility.h  MetaData.h  Utility.h  (+6 more)
Maya/2011/: CMakeLists.txt  Maya2011ExocortexAlembic.mod
Maya/2012/: Maya2012ExocortexAlembic.mod
Maya/2013/: CMakeLists.txt
Maya/2013.5/: CMakeLists.txt  Maya2013.5ExocortexAlembic.mod
Maya/2014/: CMakeLists.txt  Maya2014ExocortexAlembic.mod  MayaAlembic.versionScript
Maya/2015/: CMakeLists.txt  Maya2015ExocortexAlembic.mod
Maya/2016/: CMakeLists.txt  Maya2015ExocortexAlembic.mod
Maya/2016.5/: CMakeLists.txt  Maya2016.5ExocortexAlembic.mod
Maya/2017/: CMakeLists.txt  Maya2017ExocortexAlembic.mod
Maya/2018/: CMakeLists.txt  Maya2018ExocortexAlembic.mod  MayaAlembic.versionScript
Maya/MEL/: assignShader.mel  export.mel
Maya/MEL/ExocortexAlembic/: _attach.py  _export.py  _import.py
Maya/UI/: ExocortexAlembicAttach.ui  ExocortexAlembicExport.ui  ExocortexAlembicImport.ui
Python/: .gitignore  AlembicLicensing.cpp  AlembicLicensing.h  CMakeLists.txt  ExocortexServicesProxy.h  extension.cpp  extension.h  iarchive.cpp  iarchive.h  icompoundproperty.cpp  icompoundproperty.h  iobject.cpp  iobject.h  iproperty.cpp  iproperty.h  ixformproperty.cpp  ixformproperty.h  oarchive.cpp  oarchive.h  ocompoundproperty.cpp  ocompoundproperty.h  oobject.cpp  oobject.h  oproperty.cpp  oproperty.h  oxformproperty.cpp  oxformproperty.h  stdafx.h  timesampling.cpp  timesampling.h
Python/2.5.2/: CMakeLists.txt
Python/references/: AbcEnums.cpp  CMakeLists.txt  CoreAbstractTypes.cpp  IArchive.cpp  ICompoundProperty.cpp  IObject.cpp  ITypedScalarProperties.cpp  IUntypedProperties.cpp  SampleSelector.cpp  main.cpp
Python/samples/: OBJ2ABC.py  concatABCs.py  overwriteProp.py  renameABC.py  viewABC.py
Shared/ilmbase-1.0.2/: CMakeLists.txt  configure
Shared/ilmbase-1.0.2/vc/vc8/IlmBase/Imath/: Imath.vcproj
(+344 files in other folders)
