SET( PYTHON_LIBS python26)

file(GLOB Sources *.cpp)

LINK_LIBRARIES( ${ALEMBIC_CORE_LIBS}
			  ${ALEMBIC_HDF5_LIBS}
			  ${PYTHON_LIBS}
			  ${Boost_LIBRARIES}
			  ${ALEMBIC_ILMBASE_LIBS}
			  ${ZLIB_LIBRARIES})

if(WIN32)
	INCLUDE_DIRECTORIES( ${CMAKE_CURRENT_SOURCE_DIR}/../python-2.6.7/PC )
	INCLUDE_DIRECTORIES( ${CMAKE_CURRENT_SOURCE_DIR}/../python-2.6.7/Include )
	IF(${ALEMBIC64})
		LINK_DIRECTORIES( ${CMAKE_CURRENT_SOURCE_DIR}/../python-2.6.7/libs/x64 )
	ELSE()
		LINK_DIRECTORIES( ${CMAKE_CURRENT_SOURCE_DIR}/../python-2.6.7/libs/x86 )
	ENDIF()
	ADD_DEFINITIONS( /DBOOST_ALL_NO_LIB )
endif()

ADD_LIBRARY( ExocortexAlembicPython SHARED ${Sources} )
ADD_DEPENDENCIES( ExocortexAlembicPython AlembicAbcGeom )
